Change log
	- Add commande to add a new order
	- add timer for each order
	- order order by duration
	- new theme