@@ -1,10 +1,10 @@
 var barmanDirectives = angular.module('barmanDirectives', []);
 barmanDirectives
-    .directive('orderedAt', function() {
+    .directive('timer', function() {
         return {
             restrict: 'EA',
             scope: {
-                order: "="
+                date: "="
             },
             controller: ['$scope', '$timeout', function($scope, $timeout) {
                 var getOrderDateUntilNowInMinutes = function(date) {
@@ -13,20 +13,20 @@ barmanDirectives
                     return Math.floor((now - date) / 60000);
                 };
 
-                $scope.counter = getOrderDateUntilNowInMinutes($scope.order.value.createdAt);
+                $scope.counter = getOrderDateUntilNowInMinutes($scope.date);
                 $scope.pluralize =  ($scope.counter === 1) ? '' : 's';
 
                 /*
                  * The timer
                  */
                 $scope.onTimeout = function() {
-                    $scope.counter = getOrderDateUntilNowInMinutes($scope.order.value.createdAt);
+                    $scope.counter = getOrderDateUntilNowInMinutes($scope.date);
                     $scope.pluralize =  ($scope.counter === 1) ? '' : 's';
                     orderTimeout = $timeout($scope.onTimeout, 60000);
                 };
 
                 var orderTimeout = $timeout($scope.onTimeout, 60000);
             }],
-            templateUrl: "partials/ordered-at.html"
+            template: "{{counter}} minute{{pluralize}}"
         }
     });
