@@ -1,20 +1,31 @@
-<button class="test" ng-click="orderService.insertOrder()">Add Command test</button>
-<div class="content" ng-class="controlTime.checkOrderControlTimes(order)" ng-repeat="order in orderService.orders | orderBy:controlTime.getOrderDateUntilNowInMinutes:true">
-    <div class="products">
-        <div class="inline product" ng-repeat="product in order.value.products">
-            <div class="product-info">
-                {{product.name}}
-            </div>
-            <div class=" product-info">
-                {{product.quantity}}
+<div class="row-fluid">
+    <button class="col-lg-offset-10 button" ng-click="orderService.insertOrder()">Add Command test</button>
+</div>
+
+<div class="row-fluid content animate" ng-class="controlTime.checkOrderControlTimes(order)" ng-repeat="order in orderService.orders | orderBy:controlTime.getOrderDateUntilNowInMinutes:true">
+    <div class="row-fluid">
+        <div class="col-lg-10">
+            <div class="row-fluid">
+                <div class="col-lg-2" ng-repeat="product in order.value.products">
+                    <div class="products">
+                        <div class=" product-info">
+                            {{product.name}}
+                        </div>
+                        <div class=" product-info">
+                            {{product.quantity}}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="col-lg-2">
+            <button class="btn-success" ng-click="orderService.updateStatusToReady(order)">
+                Ready
+            </button>
+        </div>
     </div>
-    <div class="inline timer">
-        <ordered-at order="order"></ordered-at>
-        Table #{{order.value.tableNumber}}
+    <div class="row info-cmd">
+        <div class="col-lg-2 col-lg-offset-8">Table {{order.value.tableNumber}}</div>
+        <timer class="col-lg-2" date="order.value.createdAt"></timer>
     </div>
-    <button class="inline" ng-click="orderService.updateStatusToReady(order)">
-        Ready
-    </button>
 </div>
