@@ -11,8 +11,7 @@
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0",
     "jquery": "~2.1.1",
-    "angular-animate": "~1.3.0",
-    "bootstrap" : "~3.3.1",
+    "bootstrap": "~3.3.1",
     "angular-bootstrap": "~0.12.0"
   }
 }
